Finished the first section of the page.

--- a/index.html
+++ b/index.html
@@ -5,5 +5,29 @@
     <title>Landing Page</title>
 </head>
 <body>
+    <header>
+        <div class = "headerimg">
+        <img src = "images/Los_Pollos_Hermanos_logo.png" width = "200" height = "150px" alt = "los pollos hermanos logo">
+        </div>
+        <div class = "headerlinks">
+        <a href = "index.html">About us</a> <a href = "index.html"> Menu</a> <a href = "index.html">Reservations</a>
+        </div>
+    </header>
+    <div class = "firstbody">
+        <div class = "body LS">
+        <h1>The Los Pollos Hermanos is open for business! </h1>
+        <h2>We are ready to serve you our delicious Fried Chicken down in our branch in Albequerque, New Mexico!</h2>
+        <button>Make an order now!</button>
+        </div>
+        <div class = "body RS">
+        <img src = "images/maxresdefault.jpg" width = "400" height = "200" alt = "fried chicken picture">
+        </div>
+</div>
+<div class = "secondbody">
+    <div class = "infohead">
+        Some Information
+    </div>
+    
+</div>
 </body>
 </html>
