Finished second section of the web page and fixed some margin issues

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <img src = "images/Los_Pollos_Hermanos_logo.png" width = "200" height = "150px" alt = "los pollos hermanos logo">
         </div>
         <div class = "headerlinks">
-        <a href = "index.html">About us</a> <a href = "index.html"> Menu</a> <a href = "index.html">Reservations</a>
+        <a href = "index.html">Special items</a> <a href = "index.html">History</a> <a href = "index.html">Reserve now</a>
         </div>
     </header>
     <div class = "firstbody">
@@ -23,11 +23,29 @@
         <img src = "images/maxresdefault.jpg" width = "400" height = "200" alt = "fried chicken picture">
         </div>
 </div>
-<div class = "secondbody">
     <div class = "infohead">
-        Some Information
+        Special Items
     </div>
-    
+    <div class = "secondbodycontainer">
+    <div class = "minicontainer">
+    <img src = "images/images.jpeg" class = "secbodyimg" alt = "image one">
+    <div class = "text">We have all kinds of sandwiches available to satisfy your sandwich-y tastebuds!</div>
+    </div>
+    <div class = "minicontainer">
+    <img src = "images/image2.jpeg" class = "secbodyimg" alt = "image two">
+    <div class = "text">Rice meals for everyone! You're missing out if you don't try one!</div>
+    </div>
+    <div class = "minicontainer">
+    <img src = "images/image3.jpeg" class = "secbodyimg" alt  = "image three">
+    <div class = "text">Our own special dishes involve you falling in love with our food!</div>
+    </div>
+    <div class = "minicontainer">
+    <img src = "images/image4.jpeg" class = "secbodyimg" alt = "image four">
+    <div class = "text">So many creations! So tasty!</div>
+    </div>
+</div>
+<div class = "thirdbodycontainer">
+
 </div>
 </body>
 </html>
