third section finished

--- a/index.html
+++ b/index.html
@@ -45,7 +45,23 @@
     </div>
 </div>
 <div class = "thirdbodycontainer">
-
+<div class = "tbtext">
+    A man provides. And he does it even when he's not appreciated, or respected, or even loved. He simply bears up and he does it. Because he's a man. 
+</div>
+    <div class = "quotename">
+    -Gustavo Fring
+</div>
+</div>
+<div class = "lastbodycontainer">
+    <div class = "CTA">
+        <div class = "CTAtext">
+            <h2>We dare you to find any food as delicious as ours.</h2>
+             <text>It is time for you to experience the absolute greatness which is the Los Pollos Hermanos Menu.</text>
+        </div>
+        <div class = "CTAbutton">
+            Make your reservation now!
+        </div>
+    </div>
 </div>
 </body>
 </html>
