--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class = "body LS">
         <h1>The Los Pollos Hermanos is open for business! </h1>
         <h2>We are ready to serve you our delicious Fried Chicken down in our branch in Albequerque, New Mexico!</h2>
-        <button>Make an order now!</button>
+        <button class = "button1">Make an order now!</button>
         </div>
         <div class = "body RS">
         <img src = "images/maxresdefault.jpg" width = "400" height = "200" alt = "fried chicken picture">
@@ -55,11 +55,11 @@
 <div class = "lastbodycontainer">
     <div class = "CTA">
         <div class = "CTAtext">
-            <h2>We dare you to find any food as delicious as ours.</h2>
-             <text>It is time for you to experience the absolute greatness which is the Los Pollos Hermanos Menu.</text>
+            <h4>We dare you to find any food as delicious as ours</h4>
+             <h5>It is time for you to experience the absolute greatness which is the Los Pollos Hermanos Menu.</h5>
         </div>
         <div class = "CTAbutton">
-            Make your reservation now!
+            <button class = "button2">Make your reservation now!</button>
         </div>
     </div>
 </div>
