finished the footer and added anchor names connected to the header links

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <img src = "images/Los_Pollos_Hermanos_logo.png" width = "200" height = "150px" alt = "los pollos hermanos logo">
         </div>
         <div class = "headerlinks">
-        <a href = "index.html">Special items</a> <a href = "index.html">History</a> <a href = "index.html">Reserve now</a>
+        <a href = #SBC>Special items</a> <a href = #TBC>Quote of the day</a> <a href = #LBC>Reserve now</a>
         </div>
     </header>
     <div class = "firstbody">
@@ -23,7 +23,7 @@
         <img src = "images/maxresdefault.jpg" width = "400" height = "200" alt = "fried chicken picture">
         </div>
 </div>
-    <div class = "infohead">
+    <div class = "infohead" id = "SBC">
         Special Items
     </div>
     <div class = "secondbodycontainer">
@@ -44,7 +44,7 @@
     <div class = "text">So many creations! So tasty!</div>
     </div>
 </div>
-<div class = "thirdbodycontainer">
+<div class = "thirdbodycontainer" id = "TBC">
 <div class = "tbtext">
     A man provides. And he does it even when he's not appreciated, or respected, or even loved. He simply bears up and he does it. Because he's a man. 
 </div>
@@ -52,7 +52,7 @@
     -Gustavo Fring
 </div>
 </div>
-<div class = "lastbodycontainer">
+<div class = "lastbodycontainer" id = "LBC">
     <div class = "CTA">
         <div class = "CTAtext">
             <h4>We dare you to find any food as delicious as ours</h4>
@@ -63,5 +63,8 @@
         </div>
     </div>
 </div>
+<footer>
+    Copyright &copy; The Odin Project 2021
+</footer>
 </body>
 </html>
