changed footer to include github page

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
 </div>
 <footer>
-    Copyright &copy; The Odin Project 2021
+    Made by Daniel Youssef <a href = "https://www.github.com/Popusa" target = "_blank" rel="noopener noreferrer"> <img src = "Images/githublogo.png" width = 20px height = 20px alt = "the github logo"> </a>  
 </footer>
 </body>
 </html>
